<resources>
  <string name="app_name">Sentry sample</string>
  <string name="crash_from_java">Crash from Java (UncaughtException)</string>
  <string name="out_of_memory">Out of Memory (Mulithreaded)</string>
  <string name="stack_overflow">Stack Overflow</string>
  <string name="send_message">Send Message</string>
  <string name="send_message_from_inner_fragment">Send Message from inner fragment</string>
  <string name="add_attachment">Add Attachment</string>
  <string name="send_user_feedback">Send User Feedback</string>
  <string name="capture_exception">Capture Exception</string>
  <string name="breadcrumb">Breadcrumb</string>
  <string name="set_user">Set user</string>
  <string name="unset_user">Unset user</string>
  <string name="crash_from_native">Crash from native (segfault)</string>
  <string name="capture_from_native">Capture event from native</string>
  <string name="anr">ANR</string>
  <string name="native_anr">ANR (native)</string>
  <string name="do_request">Do Request</string>
  <string name="open_second_activity">Open Second Activity</string>
  <string name="open_sample_fragment">Open Sample Fragment</string>
  <string name="open_third_fragment">Open Third Fragment</string>
  <string name="open_gestures_activity">Open Gestures Activity</string>
  <string name="open_permissions_activity">Open Permissions Activity</string>
  <string name="open_compose_activity">Open Compose Activity</string>
  <string name="open_profiling_activity">Open Profiling Activity</string>
  <string name="open_custom_tabs_activity">Open Custom Tabs Activity</string>
  <string name="open_frame_data_for_spans">Open Frame Data for Spans Activity</string>
  <string name="open_metrics">Delightful Developer Metrics</string>
  <string name="test_timber_integration">Test Timber</string>
  <string name="throw_in_coroutine">Throw exception in coroutine</string>
  <string name="enable_replay_debug_mode">Enable Replay Debug Mode</string>
  <string name="show_dialog">Show Dialog</string>
  <string name="check_for_update">Check for Update</string>
  <string name="back_main">Back to Main Activity</string>
  <string name="back">Back</string>
  <string name="switch_preview">Switch Preview</string>
  <string name="tap_me">text</string>
  <string name="lipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nibh lorem, venenatis sed nulla vel, venenatis sodales augue. Mauris varius elit eu ligula volutpat, sed tincidunt orci porttitor. Donec et dignissim lacus, sed luctus ipsum. Praesent ornare luctus tortor sit amet ultricies. Cras iaculis et diam et vulputate. Cras ut iaculis mauris, non pellentesque diam. Nunc in laoreet diam, vitae accumsan eros. Morbi non nunc ac eros molestie placerat vitae id dolor. Quisque ornare aliquam ipsum, a dapibus tortor. In eu sodales tellus.

Aliquam tristique, nisi eu sodales rhoncus, ex arcu blandit quam, sed suscipit enim lorem at metus. Vivamus nec aliquet dolor. Nulla molestie sem eget nunc sollicitudin placerat. Duis lobortis nisi at dui scelerisque tincidunt. Aenean fringilla tempus justo vel finibus. Sed ut mi vulputate leo lobortis interdum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam tempus interdum scelerisque. Integer vitae turpis imperdiet tellus facilisis pretium.

Nunc bibendum nunc risus, a cursus mi convallis quis. Nullam faucibus maximus ligula ut mollis. Maecenas at lorem lectus. Duis vel fringilla felis, ut accumsan massa. Etiam lacus ipsum, dapibus vitae tempus quis, finibus sit amet justo. Integer porttitor est risus, sed cursus tellus aliquet at. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Ut convallis risus cursus elit dapibus dapibus scelerisque vel dolor. Morbi felis mi, ullamcorper eget ante vel, efficitur tincidunt sapien. Vestibulum odio nulla, vulputate nec est in, auctor pulvinar metus. Duis sed vehicula metus. Suspendisse suscipit eleifend elementum.

Aliquam pharetra, velit eu vulputate tempus, sapien purus accumsan orci, non ultricies nibh odio in elit. Nunc mattis ipsum at tellus efficitur luctus. Nulla sodales lectus at arcu aliquet lobortis. Duis a elit consequat, pulvinar nisi et, suscipit mauris. Maecenas in molestie urna. Fusce aliquet varius quam, ac auctor nulla congue ut. Donec auctor, justo id porta tempus, elit arcu viverra orci, nec tincidunt sem eros eget ex. Nullam odio ante, gravida non convallis non, rhoncus vel tortor.

Nulla interdum gravida augue, vel fringilla lorem bibendum vel. In hac habitasse platea dictumst. Praesent dapibus congue velit, vel mollis eros mattis vel. Maecenas mattis sapien lacus, ut interdum dui vulputate a. Vivamus dapibus, est ac maximus aliquam, mauris lorem vehicula nisl, eget viverra metus nunc ut libero. Quisque aliquet, dolor sit amet pellentesque semper, nisi nunc ornare velit, id porta nibh magna sit amet tortor. Curabitur finibus, lectus at convallis elementum, est sem malesuada massa, vel varius lorem justo a libero. Donec a nulla consequat, dignissim tortor id, ultrices dolor. Ut auctor vel ante sed faucibus. Ut ac dolor vel lacus facilisis bibendum.
  </string>
  <string name="camera_permission">Camera Permission</string>
  <string name="write_permission">Write External Storage Permission</string>
  <string name="profiling_duration">Duration of profile %.1f seconds</string>
  <string name="profiling_threads">CPU load threads (fibonacci): %d</string>
  <string name="profiling_running">Profiling is running</string>
  <string name="profiling_no_dir_set">No profiling dir path set</string>
  <string name="profiling_start">Start (Transaction)</string>
  <string name="profiling_start_manual">Start (Manual)</string>
  <string name="profiling_stop_manual">Stop (Manual)</string>
  <string name="profiling_status_perfetto">Active Profiler: Perfetto (ProfilingManager)</string>
  <string name="profiling_status_legacy">Active Profiler: Legacy (simpleperf)</string>
  <string name="profiling_status_none">Active Profiler: None (disabled)</string>
  <string name="profiling_config_title">Profiling Configuration</string>
  <string name="profiling_manual_started">Manual profiler started</string>
  <string name="profiling_manual_stopped">Manual profiler stopped — chunk sent to Sentry</string>
  <string name="profiling_result">Profile trace file size = %d bytes \nItem payload size = %d bytes \nData sent to Sentry size = %d bytes</string>
  <string name="open_camera_activity">Open Camera Activity</string>
  <string name="open_http_request_activity">Open Trigger HTTP Request Activity</string>
  <string name="trigger_okhttp_request">Trigger OkHttp Request</string>
</resources>
