<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:fitsSystemWindows="true">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center"
    android:paddingTop="8dp"
    android:paddingBottom="4dp">

    <TextView
      android:id="@+id/profiling_status"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textStyle="bold" />

    <ImageButton
      android:id="@+id/profiling_info"
      android:layout_width="32dp"
      android:layout_height="32dp"
      android:layout_marginStart="4dp"
      android:src="@android:drawable/ic_dialog_info"
      android:background="?android:attr/selectableItemBackgroundBorderless"
      android:contentDescription="@string/profiling_config_title" />

  </LinearLayout>

  <TextView
    android:id="@+id/profiling_duration_text"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:text="@string/profiling_duration" />

  <SeekBar
    android:id="@+id/profiling_duration_seekbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:max="300" />

  <TextView
    android:id="@+id/profiling_threads_text"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:text="@string/profiling_threads" />

  <SeekBar
    android:id="@+id/profiling_threads_seekbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:max="4" />

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center">

    <Button
      android:id="@+id/profiling_start_transaction"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/profiling_start" />

    <Button
      android:id="@+id/profiling_start_transaction_manual"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/profiling_start_manual" />

  </LinearLayout>

  <ProgressBar
    android:id="@+id/profiling_progress_bar"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:visibility="gone" />

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/profiling_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:listitem="@layout/profiling_item_list" />

</LinearLayout>
